load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

DEPENDENCIES = [
    # Keep sorted.
    "//rs/config",
    "//rs/cycles_account_manager",
    "//rs/registry/subnet_type",
    "//rs/replicated_state",
    "//rs/test_utilities/types",
    "//rs/types/base_types",
    "//rs/types/types",
]

rust_library(
    name = "embedders",
    testonly = True,
    srcs = glob(["src/**/*.rs"]),
    crate_name = "ic_test_utilities_cycles_account_manager",
    version = "0.9.0",
    deps = DEPENDENCIES,
)
